force-app/main/default/objects/Drug_Product__c/Drug_Product__c.object-meta.xml
<CustomObject>
    <description>Represents a pharmaceutical drug or clinical product in the life sciences CRM. Tracks regulatory status, therapeutic classification, FDA approval lifecycle, and data enriched from the OpenFDA API.</description>
    <label>Drug Product</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Drug Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drug Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>