force-app/main/default/objects/Drug_Product__c/fields/Active_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredients__c</fullName>
    <description>Active pharmaceutical ingredients in the drug formulation</description>
    <label>Active Ingredients</label>
    <length>500</length>
    <type>Text</type>
</CustomField>