force-app/main/default/objects/Drug_Product__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <description>Physical form of the drug product for administration</description>
    <label>Dosage Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Injectable</fullName>
            </value>
            <value>
                <fullName>Infusion</fullName>
            </value>
            <value>
                <fullName>Topical</fullName>
            </value>
            <value>
                <fullName>Oral Solution</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Inhaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>