force-app/main/default/objects/Drug_Product__c/fields/Drug_Classification__c.field-meta.xml
<CustomField>
    <fullName>Drug_Classification__c</fullName>
    <description>Regulatory classification of the drug product</description>
    <label>Drug Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rx</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Controlled Substance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>