force-app/main/default/objects/Drug_Product__c/fields/FDA_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>FDA_Approval_Date__c</fullName>
    <description>Date the drug received FDA approval</description>
    <label>FDA Approval Date</label>
    <type>Date</type>
</CustomField>