force-app/main/default/objects/Drug_Product__c/fields/Generic_Name__c.field-meta.xml
<CustomField>
    <fullName>Generic_Name__c</fullName>
    <description>Generic or chemical name of the drug (USAN designation)</description>
    <label>Generic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>