force-app/main/default/objects/Drug_Product__c/fields/Indications__c.field-meta.xml
<CustomField>
    <fullName>Indications__c</fullName>
    <description>Approved therapeutic indications and usage from FDA labeling</description>
    <label>Indications</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>