force-app/main/default/objects/Drug_Product__c/fields/Last_FDA_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_FDA_Sync__c</fullName>
    <description>Timestamp of the last successful data enrichment from the OpenFDA API</description>
    <label>Last FDA Sync</label>
    <type>DateTime</type>
</CustomField>