force-app/main/default/objects/Drug_Product__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Date the drug was commercially launched to market</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>