force-app/main/default/objects/Drug_Product__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Name of the pharmaceutical company that manufactures the drug</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>