force-app/main/default/objects/Drug_Product__c/fields/NDC_Code__c.field-meta.xml
<CustomField>
    <fullName>NDC_Code__c</fullName>
    <description>National Drug Code — unique identifier assigned by the FDA to each drug product</description>
    <externalId>true</externalId>
    <label>NDC Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>