force-app/main/default/objects/Drug_Product__c/fields/Orphan_Drug_Status__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Drug_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the drug has been granted FDA Orphan Drug designation for treating rare diseases</description>
    <label>Orphan Drug Status</label>
    <type>Checkbox</type>
</CustomField>