force-app/main/default/objects/Drug_Product__c/fields/Patent_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Patent_Expiration__c</fullName>
    <description>Date when the drug patent expires, enabling generic competition</description>
    <label>Patent Expiration</label>
    <type>Date</type>
</CustomField>