force-app/main/default/objects/Drug_Product__c/fields/Patent_Expiry_Alert__c.field-meta.xml
<CustomField>
    <fullName>Patent_Expiry_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true automatically by the Drug_Product_Patent_Expiry_Flag Flow when a patent is expiring within 18 months. Used to flag records for review in the data table.</description>
    <label>Patent Expiry Alert</label>
    <type>Checkbox</type>
</CustomField>