force-app/main/default/objects/Drug_Product__c/fields/Regulatory_Status__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Status__c</fullName>
    <description>Current stage in the FDA regulatory approval lifecycle</description>
    <label>Regulatory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Discovery</fullName>
                <default>true</default>
                <label>In Discovery</label>
            </value>
            <value>
                <fullName>IND Pending</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>NDA Submitted</fullName>
            </value>
            <value>
                <fullName>Under FDA Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Post-Marketing</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>