force-app/main/default/objects/Drug_Product__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <description>Dosage strength of the drug product (e.g., 500mg, 10mg/mL)</description>
    <label>Strength</label>
    <length>50</length>
    <type>Text</type>
</CustomField>