force-app/main/default/objects/Drug_Product__c/fields/Warnings__c.field-meta.xml
<CustomField>
    <fullName>Warnings__c</fullName>
    <description>Safety warnings and contraindications from FDA labeling</description>
    <label>Warnings</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>