force-app/main/default/objects/Drug_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Generic_Name__c</columns>
    <columns>Regulatory_Status__c</columns>
    <columns>Therapeutic_Area__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>NDC_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Drug Products</label>
</ListView>